--- a/content/post/Y2025.md
+++ b/content/post/Y2025.md
@@ -35,7 +35,6 @@ Want to relearn piano to play alot of music. I have been obsessed with music whi
 
 I Recently bought a Sony ZV-E10 Refurbished, Sorta excited to get started with it.
 
-
 ![sonyzve10](https://github.com/user-attachments/assets/24031f13-415a-4d99-94ed-86f10cd34718)
 
 
@@ -49,12 +48,10 @@ I've visited Kolkata with `Temp_block` to meet `Ruby`
 
 ![kolking](https://github.com/user-attachments/assets/bb0e0241-0cde-4044-aa90-8b89847236a2)
 
-#### Mumbai, India
+#### Mumbai & Pune, India
 
-#TODO
+This was an amazing trip where I got to meet some discord friends and basically anti introvertism! after the kolkata trip this was a different take on metrocity.
 
-#### Pune, India
+---
 
-#TODO
-
-...
+Cheers! 🏳️‍⚧️
