--- a/content/blog/Y2025.md
+++ b/content/blog/Y2025.md
@@ -54,4 +54,12 @@ This was an amazing trip where I got to meet some discord friends and basically 
 
 ---
 
+#### Mahabhaleshwar ~ Infracloud
+
+#TODO
+
+#### Thailand and Singapore
+
+#TODO
+
 Cheers! 🏳️‍⚧️
