--- a/content/1F3F3.md
+++ b/content/1F3F3.md
@@ -9,9 +9,11 @@ ShowToc: false
 disableShare: true
 ---
 
-I have some big things that happened in 2025 which I haven't really told alot of people. I recently got diagnosed with _Gender Incongruence_ a.k.a I am **Non Binary 🏳️‍🌈**
+I have some big things that happened in 2025 which I haven't really told alot of people. I recently got diagnosed with _Gender Incongruence_ a.k.a I am **Transgender 🏳️‍⚧️** now!
 
 _I will add more things here as stuff happens.. But I am excited!!_
+
+- Currently 7 months on HRT... awaiting Legal name changes and docs.
 
 Cheers!
 
