--- a/content/blog/Y2025.md
+++ b/content/blog/Y2025.md
@@ -4,62 +4,128 @@ date: 2025-04-05T08:59:21Z
 draft: false
 ---
 
-## Happy new year 2K25
+# Happy new year 2K25
 
-> 4 months into 2025
 
-My first ~~public~~ blogpost for 2025!
+My Year in Review for 2k25!!
 
-Alot of things have happened in the past 4 months, Firstly I got into a new organisation! My very first job change. I am still awaiting full onboarding as of time of writing this blogpost. With the new organisation being work from office, I will be experiencing new things this year
+Alot of things have happened in the past 4 months, Firstly I got into a new organisation! My very first** job change. I am still awaiting full onboarding as of time of starting this blog. With the new organisation being work from office, It will be a different change for me, More Extrovert-y! 
 
-- Moving out of my parents house!
-- Office culture and life
+So many things happened this year that its just felt like I am back in 2019's where things actually happened in an year, unlike monotonous times post covid era!
 
-and many more...
+Major thing that happened this year was, I am now well.. LGBTQ.
 
-## Resolutions
+<details>
+<summary><i>LGBTQ (╹ u ╹)</i></summary>
+<br>
+<hr>
 
-I did make some resolutions 
+Well It became too obvious to hide for alot of people so well... I am now `She/Her`, You can read more about it here [1f3f3](/1f3f3) (˵ •̀ ᴗ - ˵ ) ✧.
 
-### ~~Job Switching~~
+<hr>
+</details>
+
+## ~~Job Switching~~
 
 I am sure this isnt a major resolution but I really needed to get away from that workplace which was eating my sanity.
 
-### Piano
+<details>
+<summary><i>Update (╹ u ╹)</i></summary>
+<br>
+<hr>
 
-Want to relearn piano to play alot of music. I have been obsessed with music which has been keeping me sane during alot of things.
+I Doubled down on Job switching this year..! Literally..!
 
-<iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/1hpUnc0TTFEbcpSsg7B4uv?utm_source=generator&theme=0" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+I resigned from _Zigram_ in March and joined _Infracloud_, Where I got to join _NPCI_ Project ... Well, Due to Logistics, I resigned again.
 
-### Photography 
+Recently joined _JP Morgan Chase_ in Nov!
 
-I Recently bought a Sony ZV-E10 Refurbished, Sorta excited to get started with it.
+<hr>
+</details>
 
-![sonyzve10](https://github.com/user-attachments/assets/24031f13-415a-4d99-94ed-86f10cd34718)
+## Photography 
+
+I bought a Sony Camera in June, It made me realise how amazing taking photos feels, rather than just point and click.
+
+![sony](https://cdn.pacsui.me/imgs/irl/sonycam.jpeg)
+
+<details>
+<summary><i>Random Photo-dump (˵ •̀ ᴗ - ˵ ) ✧</i></summary>
+<br>
+<hr>
+
+https://photos.app.goo.gl/6J9dyYoxSZaVqcxdA
+
+P.S Photos are from November trip when I actually took the camera ... finally! (Scroll Down)
+
+<hr>
+</details>
 
 
-### Travel
+### Choirs
 
-I have some cool trips plans this year alongside taking my brother on trips to Malaysia, Vietnam and Thailand!
+This year... I've been to choirs organised by [instagram@thehydvoices](https://www.instagram.com/thehydvoices/). Oh my they are beautiful, serene, fabulous ⸜(｡˃ ᵕ ˂)⸝♡.
 
-#### Kolkata, India
+
+<details>
+<summary><i>June</i></summary>
+<br>
+<hr>
+
+{{< youtube SXW4qgWlGw0 >}}
+
+<hr>
+</details>
+
+<details>
+<summary><i>December</i></summary>
+<br>
+<hr>
+
+{{< youtube 4p-lwmTEtHI >}}
+
+<hr>
+</details>
+
+
+## Travel
+
+I have some cool trips plans this year. Checkout [/vlog](/vlogs) for trip vlogs (๑>◡<๑).
+
+#### Kolkata, India (March)
 
 I've visited Kolkata with `Temp_block` to meet `Ruby`
 
-![kolking](https://github.com/user-attachments/assets/bb0e0241-0cde-4044-aa90-8b89847236a2)
+![kolking](https://cdn.pacsui.me/imgs/irl/kolking.jpeg)
 
-#### Mumbai & Pune, India
+#### Mumbai & Pune, India (March)
 
-This was an amazing trip where I got to meet some discord friends and basically anti introvertism! after the kolkata trip this was a different take on metrocity.
+This was an amazing trip where I got to meet some discord friends and basically anti introvertism! after the kolkata trip this was a different take on metrocity! and I got to meet swasti!!!
 
----
+![mum](https://cdn.pacsui.me/imgs/irl/mumbai.jpeg)
 
-#### Mahabhaleshwar ~ Infracloud
+#### Mahabhaleshwar (June) ~ Infracloud 
 
-#TODO
+ I was taken for year end celebration by a company I joined Improving (Formerly called Infracloud), Well This was an annual get together sorta party... Got to experience a corpo party lol waoh!
 
-#### Thailand and Singapore
+ ![mahabhal](https://cdn.pacsui.me/imgs/irl/mahabhal.jpeg)
 
-#TODO
+#### Thailand and Singapore (November)
+
+A stupidly adhoc plan with a person I met recently _Pallavi_, Was in middle of switching from Improving to JPMC... so why not go on a vacation! annnn...d MIKU CONCERT OMGawsh!!!!
+
+![mikuuu](https://cdn.pacsui.me/imgs/irl/miku.jpeg)
+
+
+### Makeup!
+
+OMG This year I've learnt how to do makeup on my own! heck yeah!
+
+This is the first time I've done eyeliner to myself... gosh this was hard but pretty <br>
+(つ｡˃ ᵕ ˂)つ ⸝♡
+
+![first_eyeliner](https://cdn.pacsui.me/imgs/irl/first_eyeliner.jpeg)
+
+#TODO: Pending!
 
 Cheers! 🏳️‍⚧️
