--- a/content/blog/Y2025.md
+++ b/content/blog/Y2025.md
@@ -6,7 +6,6 @@ draft: false
 
 # Happy new year 2K25
 
-
 My Year in Review for 2k25!!
 
 Alot of things have happened in the past 4 months, Firstly I got into a new organisation! My very first** job change. I am still awaiting full onboarding as of time of starting this blog. With the new organisation being work from office, It will be a different change for me, More Extrovert-y! 
@@ -15,8 +14,14 @@ So many things happened this year that its just felt like I am back in 2019's wh
 
 Major thing that happened this year was, I am now well.. LGBTQ.
 
+## Being not straight!
+
+I was diagnosed with Gender Incongruence and I am currently on HRT.
+
+Would really like to thank [Dr Aana Shah](https://www.draanashah.com/), she was extremely helpful and I've gotten my GID and Endo recommendations from her.
+
 <details>
-<summary><i>LGBTQ (╹ u ╹)</i></summary>
+<summary><i>🏳️‍⚧️ (╹ u ╹) [click to open] </i></summary>
 <br>
 <hr>
 
@@ -30,7 +35,7 @@ Well It became too obvious to hide for alot of people so well... I am now `She/H
 I am sure this isnt a major resolution but I really needed to get away from that workplace which was eating my sanity.
 
 <details>
-<summary><i>Update (╹ u ╹)</i></summary>
+<summary><i>Update (╹ u ╹) [click to open] </i></summary>
 <br>
 <hr>
 
@@ -50,7 +55,7 @@ I bought a Sony Camera in June, It made me realise how amazing taking photos fee
 ![sony](https://cdn.pacsui.me/imgs/irl/sonycam.jpeg)
 
 <details>
-<summary><i>Random Photo-dump (˵ •̀ ᴗ - ˵ ) ✧</i></summary>
+<summary><i>Random Photo-dump (˵ •̀ ᴗ - ˵ ) ✧ [click to open] </i></summary>
 <br>
 <hr>
 
@@ -68,7 +73,7 @@ This year... I've been to choirs organised by [instagram@thehydvoices](https://w
 
 
 <details>
-<summary><i>June</i></summary>
+<summary><i>June [click to open]</i></summary>
 <br>
 <hr>
 
@@ -78,7 +83,7 @@ This year... I've been to choirs organised by [instagram@thehydvoices](https://w
 </details>
 
 <details>
-<summary><i>December</i></summary>
+<summary><i>December [click to open] </i></summary>
 <br>
 <hr>
 
@@ -117,7 +122,7 @@ A stupidly adhoc plan with a person I met recently _Pallavi_, Was in middle of s
 ![mikuuu](https://cdn.pacsui.me/imgs/irl/miku.jpeg)
 
 
-### Makeup!
+## Makeup!
 
 OMG This year I've learnt how to do makeup on my own! heck yeah!
 
@@ -126,6 +131,26 @@ This is the first time I've done eyeliner to myself... gosh this was hard but pr
 
 ![first_eyeliner](https://cdn.pacsui.me/imgs/irl/first_eyeliner.jpeg)
 
-#TODO: Pending!
+## Family Abuse!
+
+<details>
+<summary><i> <i>Sensitive</i> [click to open] </i></summary>
+<br>
+<hr>
+
+I realised one thing this year... is that my parents (and maybe my brother?) are abusive. Shocker that I haven't really considered or realised. How much self hatred they have put in me to the point, I hate myself. Slowly changing this ofcourse, self love is really needed for someone's well being.
+
+Few things that still bother me is how they mention that I am disrespectful when I wasn't given respect to begin with! I still have no clue what love as an emotion means or feels yet they throw things like "Oh we loved you and fed you for 20+ years ... is this how you treat us"
+
+Literal negligence on their side instead of resolving conflicts, its just silence or backbitching insults, Aunts coming to home to threaten me on police cases. Being called *Pathetic*, *Ugly*, *Disgusting*, *Demonic/Inhuman*, *Homeless*, Being told how I'll lose my job and come running back to them for money.
+
+I probably shoudn't be putting this out on a blog but this is one of the serious major things that happened with me this year.
+
+<hr>
+</details>
+
+
+
+Anyhow.. This was one heck of an year.. alot of new year resolutions were actually completed omg and I am proud of myself.
 
 Cheers! 🏳️‍⚧️
