--- a/content/blog/Y2026.md
+++ b/content/blog/Y2026.md
@@ -6,4 +6,15 @@ draft: false
 
 # Happy new year 2K26
 
+2026 is like an odd-ball of an year cause, 2025 felt like an eternity, I do have so many things planned this year and fresh set of resolutions and things to do!
+
+#TODO
+
+- Piano
+- Learn Mandarin
+- Japan Trip?
+- Europe?
+- Moving out of home
+- Plan to leave India
+
 #TODO
