--- a/content/blog/Y2024.md
+++ b/content/blog/Y2024.md
@@ -75,20 +75,23 @@ Thats all I've got for now, Stay tuned for the homelab blog post or video :>
 
 ---
 
-> Update 31st December 2024
 
 ## What have I done in 2024
 
-#TODO
-
 - I am starting to love golang and worked on it alot, Absolutely love golang and want to squeeze and cuddle the gophers
 
-- I have went to Singapore and Malaysia :D
+- I've been to Singapore and Malaysia and OMG I love it sm.
 
-![image](https://github.com/user-attachments/assets/14e5e2e7-a44e-453b-b86a-a93675f74c16)
-
+{{< youtube nsA2USknbQM >}}
 
 - Abandoned projects still stay abandonned ;-; hopefully 2025 is my year.
 
-Happy new year 2025 :D
----
+Ciaos!
+
+<br>
+<br>
+
+
+## Year in review 2k24
+
+![lastImage](https://pub-63132de0d0bd4788949b876a878bc482.r2.dev/misc-image/2024_yir.jpg)
