--- a/content/blog/Y2025.md
+++ b/content/blog/Y2025.md
@@ -30,23 +30,25 @@ Well It became too obvious to hide for alot of people so well... I am now `She/H
 <hr>
 </details>
 
+<br>
+
+---
+
 ## ~~Job Switching~~
 
 I am sure this isnt a major resolution but I really needed to get away from that workplace which was eating my sanity.
 
-<details>
-<summary><i>Update (╹ u ╹) [click to open] </i></summary>
-<br>
-<hr>
+**-- Update --**
 
 I Doubled down on Job switching this year..! Literally..!
 
-I resigned from _Zigram_ in March and joined _Infracloud_, Where I got to join _NPCI_ Project ... Well, Due to Logistics, I resigned again.
+I resigned __ZIGRAM__ in March and joined __Infracloud__ (Due to logistics of me working at their client location of _NPCI_ I had to resign again).
 
-Recently joined _JP Morgan Chase_ in Nov!
+I joined __JP Morgan Chase__ in Nov! Wohoo!
 
-<hr>
-</details>
+<br>
+
+---
 
 ## Photography 
 
@@ -57,17 +59,18 @@ I bought a Sony Camera in June, It made me realise how amazing taking photos fee
 <details>
 <summary><i>Random Photo-dump (˵ •̀ ᴗ - ˵ ) ✧ [click to open] </i></summary>
 <br>
-<hr>
 
 https://photos.app.goo.gl/6J9dyYoxSZaVqcxdA
 
 P.S Photos are from November trip when I actually took the camera ... finally! (Scroll Down)
 
-<hr>
 </details>
 
+<br>
 
-### Choirs
+---
+
+## Choirs
 
 This year... I've been to choirs organised by [instagram@thehydvoices](https://www.instagram.com/thehydvoices/). Oh my they are beautiful, serene, fabulous ⸜(｡˃ ᵕ ˂)⸝♡.
 
@@ -75,52 +78,52 @@ This year... I've been to choirs organised by [instagram@thehydvoices](https://w
 <details>
 <summary><i>June [click to open]</i></summary>
 <br>
-<hr>
 
 {{< youtube SXW4qgWlGw0 >}}
 
-<hr>
 </details>
 
 <details>
 <summary><i>December [click to open] </i></summary>
 <br>
-<hr>
 
 {{< youtube 4p-lwmTEtHI >}}
 
-<hr>
 </details>
 
+<br>
+
+---
 
 ## Travel
 
-I have some cool trips plans this year. Checkout [/vlog](/vlogs) for trip vlogs (๑>◡<๑).
+Some of the cool trips and vacations I did this year! (๑>◡<๑).
 
-#### Kolkata, India (March)
+#### - Kolkata, India (March)
 
-I've visited Kolkata with `Temp_block` to meet `Ruby`
+I've visited Kolkata with `Temp_block` to meet `Ruby`, This was a very adhoc trip ... ngl I wasn't so keen on this trip, Overall Kolkata has really good food wowie .. and is polluted as hell!
 
-![kolking](https://cdn.pacsui.me/imgs/irl/kolking.jpeg)
+#### - Mumbai & Pune, India (March)
 
-#### Mumbai & Pune, India (March)
+This was an amazing trip where I got to meet some discord friends, basically this became my anti introvert trip! after the mess of a kolkata trip! and I got to meet [Swasti!!](https://www.youtube.com/@Swasti1)
 
-This was an amazing trip where I got to meet some discord friends and basically anti introvertism! after the kolkata trip this was a different take on metrocity! and I got to meet swasti!!!
-
-![mum](https://cdn.pacsui.me/imgs/irl/mumbai.jpeg)
-
-#### Mahabhaleshwar (June) ~ Infracloud 
+#### - Mahabhaleshwar (June) ~ Infracloud 
 
  I was taken for year end celebration by a company I joined Improving (Formerly called Infracloud), Well This was an annual get together sorta party... Got to experience a corpo party lol waoh!
 
- ![mahabhal](https://cdn.pacsui.me/imgs/irl/mahabhal.jpeg)
 
-#### Thailand and Singapore (November)
+#### - Thailand and Singapore (November)
 
-A stupidly adhoc plan with a person I met recently _Pallavi_, Was in middle of switching from Improving to JPMC... so why not go on a vacation! annnn...d MIKU CONCERT OMGawsh!!!!
+A stupidly adhoc plan with a person I met very recently _Pallavi_, Was in middle of switching from Improving to JPMC... so why not go on a vacation! annnn...d MIKU CONCERT OMGawsh!!!!
 
 ![mikuuu](https://cdn.pacsui.me/imgs/irl/miku.jpeg)
 
+> All the trips are vlogged on my other youtube - [Pacsui ~ IRL](https://www.youtube.com/@pacsuime)
+> Or you can check them out on - [/vlogs](/vlogs)
+
+<br>
+
+---
 
 ## Makeup!
 
@@ -130,6 +133,10 @@ This is the first time I've done eyeliner to myself... gosh this was hard but pr
 (つ｡˃ ᵕ ˂)つ ⸝♡
 
 ![first_eyeliner](https://cdn.pacsui.me/imgs/irl/first_eyeliner.jpeg)
+
+<br>
+
+---
 
 ## Family Abuse!
 
@@ -154,3 +161,7 @@ I probably shoudn't be putting this out on a blog but this is one of the serious
 Anyhow.. This was one heck of an year.. alot of new year resolutions were actually completed omg and I am proud of myself.
 
 Cheers! 🏳️‍⚧️
+
+## Year in review 2k25
+
+![lastImage](https://pub-63132de0d0bd4788949b876a878bc482.r2.dev/misc-image/2025_yir.jpg)
