--- a/content/blog/Y2024.md
+++ b/content/blog/Y2024.md
@@ -4,7 +4,7 @@ date: 2024-03-13T18:32:47Z
 draft: false
 ---
 
-I have dissapeared for a very long time ... last post was back in [E paper Kiosk : 2022-08-28](/post/e-paper-kiosk/)
+I have dissapeared for a very long time ... last post was back in [E paper Kiosk : 2022-08-28](/e-paper-kiosk/)
 
 I've been dealing with alot of stuff that happened in the year of 2023; Firstly I got a JOB ... In this economy of layoffs and all I somehow was lucky enough to get one although not in my field *Devops Engineer* still something that interests me, As this blog and all the infrastructure I have keeping this website running is my passion project.
 
@@ -47,6 +47,10 @@ Cloudflare tunnels to proxy from home network to well [prashantnook.in](https://
 
 I am currently writing a post regarding my homelab setup where I will be going about this in more detail. 
 
+**--Update--**
+
+You can read about the [homelab here](/homelab)
+
 ## Future plans?
 
 Currently I have a bunch of plans which I want to try and bunch of abandonned projects which needs some revival.
@@ -78,9 +82,17 @@ Thats all I've got for now, Stay tuned for the homelab blog post or video :>
 
 ## What have I done in 2024
 
-- I am starting to love golang and worked on it alot, Absolutely love golang and want to squeeze and cuddle the gophers
+- Been to Illenium Concert in Bangalore!
 
-- I've been to Singapore and Malaysia and OMG I love it sm.
+> Well this was a huge dissapointment, it was um to put it... a horrible experience with people smoking and drinking instead of enjoying music T_T
+
+-  Learning Golang
+
+> I am starting to love golang and worked on it alot, Absolutely love golang and want to squeeze and cuddle the gophers
+
+- I've been to Singapore and Malaysia
+
+>  OMG I love it sm.
 
 {{< youtube nsA2USknbQM >}}
 
